--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -74,7 +74,7 @@
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button routerLink="/Performance-Dash" class="btn service-btn">
                 <i class="fas fa-chart-line"></i> Performance
               </button>
             </div>
