--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -79,7 +79,7 @@
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button routerLink="/Security" class="btn service-btn">
                 <i class="fas fa-shield-alt"></i> Security Service
               </button>
             </div>
