--- a/frontend/src/app/components/awr-report/awr-report.component.html
+++ b/frontend/src/app/components/awr-report/awr-report.component.html
@@ -14,7 +14,7 @@
           <li><a href="/Performance-Dash">Real-Time Stats <i class="fas fa-chart-line"></i> </a></li>
           <li><a href="/Resource-Usage"> Resource Usage <i class="fas fa-server"></i></a></li>
           <li><a href="/ASH-Report">ASH Report  <i class="fas fa-database"></i> </a></li>
-          <li><a href="/Awr-report"> AWR Report  <i class="fas fa-file-alt"></i></a></li>
+          <li><a id="active" href="/Awr-report"> AWR Report  <i class="fas fa-file-alt"></i></a></li>
         </ul>
       </nav>
     </aside>
