--- a/frontend/src/app/components/login-page/login-page.component.html
+++ b/frontend/src/app/components/login-page/login-page.component.html
@@ -20,13 +20,14 @@
         <a href="#services" class="nav-item nav-link">Services</a>
         <a href="#contact" class="nav-item nav-link">Contact</a>
       </div>
-      <a href="/register" class="btn btn-danger btn-sm rounded-pill mx-2 d-flex align-items-center">
+      <!-- <a href="/register" class="btn btn-danger btn-sm rounded-pill mx-2 d-flex align-items-center">
         <i class="fas fa-user-plus me-2"></i> Register
-      </a>
+      </a> -->
     </div>
   </nav>
 </div>
 <!-- Navbar End -->
+
 
 <!-- Login Start -->
 <div class="container-xxl py-5 bg-light vh-100 d-flex align-items-center">
